k8s/base/booked-management/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booked-management
spec:
  selector:
    matchLabels:
        app.kubernetes.io/name : booked-management
  template:
    metadata:
      labels:
        app.kubernetes.io/name : booked-management
    spec:
      containers:
      - name: booked-management
        image: booked-management
        ports:
        - containerPort: 80
