k8s/base/booked-management/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: booked-management
spec:
  selector:
    app.kubernetes.io/name: booked-management
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
