k8s/base/booked-management/http-route-booking.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: booked-management-booking-route
spec:
  parentRefs:
    - name: booking-app-gateway
#  hostnames:
#    - "foo.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /booked-rooms
        - path:
            type: PathPrefix
            value: /booked-management
        - path:
            type: PathPrefix
            value: /cancel-booking
      backendRefs:
        - name: booked-management
          port: 80
